@@ -450,7 +450,7 @@ AC_CHECK_FUNCS( [nanosleep alarm times isnanf select setenv putenv] \
 AC_CHECK_FUNCS( [expf logf sqrtf cosf sinf tanf sinhf coshf tanhf] \
 		[floorf ceilf fabsf frexpf ldexpf log1p log1pf log1pl])
 
-AC_CHECK_FUNCS( [sched_yield] )
+AC_CHECK_FUNCS( [sched_yield uname] )
 
 dnl =====================================================================
 dnl Checks for system services
